--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://hs.wuchenxi.xyz:6819/ftp/controlerPanel/dl/ControlerPanel_40.ipa</string>
+					<string>https://github.com/wumeixia/installDemoApp/blob/main/ControlerPanel_40.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
